# tgMonstercatNewsbot

./: .dockerignore  Dockerfile  README.md  config.py  main.py  pyproject.toml
callbacks/: __init__.py  post.py
handlers/: __init__.py  post.py  start.py
keyboards/: inline.py
middlewares/: throttling.py
scrapper/: __init__.py  scrapper.py
utils/: __init__.py  states.py
