[tool.poetry]
name = "tgmonstercatnewsbot"
version = "0.1.0"
description = ""
authors = ["Popov Nikita <popovnikita01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.3.0"
bs4 = "^0.0.2"
requests = "^2.31.0"
lxml = "^5.1.0"
pymorphy3 = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
