[project]
name = "tgmonstercatnewsbot"
version = "0.1.0"
description = ""
authors = [{ name = "Popov Nikita", email = "popovnikita01@gmail.com" }]
requires-python = "~=3.11"
readme = "README.md"
dependencies = [
    "aiogram>=3.3.0,<4",
    "bs4>=0.0.2,<0.0.3",
    "requests>=2.31.0,<3",
    "lxml>=5.1.0,<6",
    "pymorphy3>=2.0.1,<3",
    "pydantic-settings>=2.1.0,<3",
    "cachetools>=5.3.2,<6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
